--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+    {% include "challenges/includes/header.html" %}
+
     <h1>{{month|title }}'s Challenge</h1>
     {% if text == None %}
         <h2>There are no goals set for {{month|title}}</h2>
