--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block css_files %}
+    <link rel="stylesheet" href="{% static "challenges/challenge.css" %}">
+    <link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
+
+{% endblock %}
 
 {% block page_title %}{{month|title}} Challenge{% endblock %}
 
@@ -8,7 +15,7 @@
 
     <h1>{{month|title }}'s Challenge</h1>
     {% if text == None %}
-        <h2>There are no goals set for {{month|title}}</h2>
+        <h2 class="fallback">There are no goals set for {{month|title}}</h2>
     {% else %}
         <h2>{{ text }}</h2>
     {% endif %}
