--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -3,6 +3,8 @@
 
 {% block css_files %}
     <link rel="stylesheet" href="{% static "challenges/challenges.css" %}">
+    <link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
+
 {% endblock %}
 
 {% block page_title %}
